# Onix

./: Cargo.toml  onix.code-workspace
onix-client/: .eslintrc  .gitignore  .graphqlrc  .prettierrc  codegen.ts  codegen.yml  index.html  package.json  pnpm-lock.yaml  rome.json  tsconfig.json  vite.config.js  vite.config.ts
onix-client/src/: App.gql  App.svelte  App.tsx  AppRouter.svelte  Routes.tsx  apollo-client.ts  main.ts  router.tsx  routes.ts  routing.ts  routing.tsx  utils.ts
onix-client/src/atoms/ActionButton/: index.tsx
onix-client/src/atoms/AppContainerStatus/: AppContainerStatus.tsx
onix-client/src/atoms/AppStatus/: index.tsx
onix-client/src/atoms/BorderedBox/: index.tsx
onix-client/src/atoms/BoxedStack/: index.tsx
onix-client/src/atoms/CreateAppContainersButton/: CreateAppContainer.gql  index.tsx
onix-client/src/atoms/Link/: index.tsx
onix-client/src/atoms/StartAppButton/: StartApp.gql  index.tsx
onix-client/src/atoms/StopAppButton/: StopApp.gql  index.tsx
onix-client/src/graphql/: client.ts
onix-client/src/graphql/fragments/: App.fragment.gql  AppContainer.fragment.gql
onix-client/src/molecules/: SideNav.tsx
onix-client/src/molecules/AppActions/: CreateAppContainers.gql  DestroyAppContainers.gql  GenerateAppTemplate.gql  RemoveApp.gql  index.tsx
onix-client/src/molecules/TemplateImportButton/: DecodeTemplate.gql  index.tsx
onix-client/src/molecules/ValidableInput/: ValidableInput.tsx
onix-client/src/organisms/: SideNav.svelte  SideNav.tsx  Template.tsx
onix-client/src/organisms/ConfirmModal/: index.tsx
onix-client/src/organisms/SideNav/: index.tsx
onix-client/src/pages/: HomePage.gql  HomePage.tsx  Routes.tsx
onix-client/src/pages/AppPage/: index.gql  index.tsx
onix-client/src/pages/CreateAppPage/: ContainerEnvVars.tsx  ContainerPortBindings.tsx  ContainersVolumes.tsx  CreateApp.gql  CreateAppContainer.tsx  CreateAppPage.tsx
onix-client/src/pages/HomePage/: AppsList.tsx  HomePage.gql  index.tsx
onix-client/src/templates/: Template.svelte  Template.tsx
onix-server/: Cargo.toml
onix-server/src/: cmd.rs  data.rs  lib.rs  main.rs  saving.rs
onix-server/src/apps/: app.rs  containers.rs  env.rs  existing_containers.rs  mod.rs  runner.rs  templates.rs  volumes.rs
onix-server/src/docker/: constants.rs  containers.rs  networking.rs
onix-server/src/server/: graphql.rs  mod.rs  mutations.rs  queries.rs  user_data.rs
onix-server/src/stores/: content.rs  mod.rs
onix-server/src/utils/: graphql.rs  mod.rs  time.rs
src/: cmd.rs  data.rs  main.rs  saving.rs
src/apps/: app.rs  containers.rs  env.rs  mod.rs  runner.rs
src/docker/: constants.rs  containers.rs  detect.rs  images.rs  mod.rs  networking.rs
src/docker/containers/: create.rs  list.rs  mod.rs  start.rs  stop.rs
src/server/: graphql.rs  logger.rs  mod.rs  mutations.rs  queries.rs  state.rs  user_data.rs
src/utils/: graphql.rs  mod.rs  shell.rs
