[package]
name = "onix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-graphql = { version = "4.0.15", default-features = false, features = ["time", "log"] }
async-graphql-axum = "4.0.15"
axum = "0.5.16"
bollard = "0.13.0"
clap = { version = "4.0.15", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.1"
futures = "0.3.24"
log = "0.4.17"
once_cell = "1.15.0"
os_pipe = "1.1.1"
paste = "1.0.9"
pomsky = "0.7.0"
pomsky-macro = "0.7.0"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
time = { version = "0.3.15", features = ["local-offset", "serde"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
