[package]
name = "onix-server"
version = "0.1.0"
edition = "2021"
default-run = "onix-server"

[[bin]]
name = "onix-server"
path = "src/main.rs"

[[bin]]
name = "onix-pack-store"
path = "src/bin/store_packer.rs"

[dependencies]
anyhow = "1.0.69"
async-graphql = { git = "https://github.com/ClementNerma/async-graphql-fork", branch = "feat/input-name-suffix", default-features = false, features = ["graphiql", "time", "log"] }
async-graphql-axum = { git = "https://github.com/ClementNerma/async-graphql-fork", branch = "feat/input-name-suffix" }
async-trait = "0.1.64"
axum = "0.6.9"
base62 = "2.0.2"
bollard = "0.14.0"
clap = { version = "4.1.8", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
lz4_flex = "0.10.0"
once_cell = "1.17.1"
os_pipe = "1.1.3"
paste = "1.0.11"
pomsky = "0.9.0"
pomsky-macro = "0.9.0"
rand = "0.8.5"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
time = { version = "0.3.20", features = ["local-offset", "serde"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
