[package]
name = "onix-server"
version = "0.1.0"
edition = "2021"
default-run = "onix-server"

[[bin]]
name = "onix-server"
path = "src/main.rs"

[[bin]]
name = "onix-pack-store"
path = "src/bin/store_packer.rs"

[dependencies]
anyhow = "1.0.71"
async-graphql = { git = "https://github.com/ClementNerma/async-graphql-fork", branch = "feat/input-name-suffix", default-features = false, features = ["graphiql", "time", "log"] }
async-graphql-axum = { git = "https://github.com/ClementNerma/async-graphql-fork", branch = "feat/input-name-suffix" }
async-trait = "0.1.68"
axum = "0.6.18"
base62 = "2.0.2"
bollard = "0.14.0"
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
lz4_flex = "0.10.0"
once_cell = "1.17.2"
os_pipe = "1.1.4"
paste = "1.0.12"
pomsky = "0.10.0"
pomsky-macro = "0.10.0"
rand = "0.8.5"
regex = "1.8.3"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
time = { version = "0.3.21", features = ["local-offset", "serde"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
