[package]
name = "onix-server"
version = "0.1.0"
edition = "2021"
default-run = "onix-server"

[[bin]]
name = "onix-server"
path = "src/main.rs"

[[bin]]
name = "onix-pack-store"
path = "src/bin/store_packer.rs"

[dependencies]
async-graphql-axum = { git = "https://github.com/ClementNerma/async-graphql-fork", rev = "53535fa71b63388e0f1bceea7f00a7029688c466" }
anyhow = "1.0.72"
async-graphql = { git = "https://github.com/ClementNerma/async-graphql-fork", rev = "53535fa71b63388e0f1bceea7f00a7029688c466", default-features = false, features = [
    "graphiql",
    "time",
    "log",
] }
async-trait = "0.1.71"
axum = "0.6.19"
base62 = "2.0.2"
bollard = "0.14.0"
clap = { version = "4.3.17", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
lz4_flex = "0.11.1"
once_cell = "1.18.0"
os_pipe = "1.1.4"
paste = "1.0.14"
pomsky = "0.10.0"
pomsky-macro = "0.10.0"
rand = "0.8.5"
regex = "1.9.1"
reqwest = "0.11.18"
serde = { version = "1.0.173", features = ["derive"] }
serde_yaml = "0.9.24"
time = { version = "0.3.23", features = ["local-offset", "serde"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.2", features = ["cors"] }
